--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,16 @@
         <tomcat.version>9.0.16</tomcat.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>[24.1.1,)</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId> tomcat-embed-core</artifactId>
